# sandbox

./: .gitignore  Dockerfile  README.md  docker-compose.yml  enter_container.sh  pull_ros.sh
workspace/: .gitignore
workspace/algorithms/: CMakeLists.txt
workspace/algorithms/include/: common_headers.h  data_structures.h  p1c1_is_unique.h  p1c2_check_permutations.h  p1c3_urlfy.h  p1c4_palindrome_permutation.h  p2c1_remove_dups.h  p2c2_k_to_last.h  p2c3_delete_middle_node.h  p2c4_partition.h  p8c1_triple_step.h  p8c2_robot_in_grid.h  p8c3_magic_index.h
workspace/algorithms/src/: data_structures.cpp  main.cpp  p1c1_is_unique.cpp  p1c2_check_permutations.cpp  p1c3_urlfy.cpp  p1c4_palindrome_permutation.cpp  p2c1_remove_dups.cpp  p2c2_k_to_last.cpp  p2c3_delete_middle_node.cpp  p2c4_partition.cpp  p8c1_triple_step.cpp  p8c2_robot_in_grid.cpp  p8c3_magic_index.cpp
workspace/catkin_ws/: .env  README.md  build_and_source.sh  build_single_target.sh  ros_commands.txt  ros_pipeline.md
workspace/catkin_ws/src/learning_ros/: README.md
workspace/catkin_ws/src/learning_ros/publisher/: CMakeLists.txt  package.xml
workspace/catkin_ws/src/learning_ros/publisher/src/: publisher.cpp
workspace/catkin_ws/src/learning_ros/subscriber/: CMakeLists.txt  package.xml
workspace/catkin_ws/src/my_cpp_pack/: CMakeLists.txt  package.xml
workspace/catkin_ws/src/my_cpp_pack/include/my_cpp_pack/: a_planner.h
workspace/catkin_ws/src/my_cpp_pack/src/: a_planner.cpp  my_node.cpp
workspace/catkin_ws/src/my_python_pack/: CMakeLists.txt  package.xml  setup.py
workspace/catkin_ws/src/my_python_pack/scripts/: my_node.py
workspace/catkin_ws/src/my_python_pack/src/my_python_pack/: a_state_estimator.py  my_node.py
workspace/catkin_ws/src/python_pkg/: CMakeLists.txt  package.xml
workspace/catkin_ws/src/python_pkg/src/: listener.py  talker.py
workspace/catkin_ws/src/simple_comm_cpp/: CMakeLists.txt  package.xml
workspace/catkin_ws/src/simple_comm_cpp/src/: listener.cpp  robotics_int_solved.cpp  robotics_int_solved_1.cpp  robotics_int_solved_2.cpp  robotics_int_solved_3.cpp  robotics_int_solved_4.cpp  talker.cpp
workspace/learning-cpp/: CMakeLists.txt  README.md
workspace/learning-cpp/include/: classes.h  lambda_functions.h  memory_management.h  pointers.h  threads_school.h
workspace/learning-cpp/src/: cheatsheet.cpp  classes.cpp  lambda_functions.cpp  main.cpp  memory_management.cpp  pointers.cpp  threads_school.cpp
workspace/learning-python/: README.md  cheatsheet_long.py  cheatsheet_short.py  coding_interview_1.py  coding_interview_2.py  main.py  problems_1.py  problems_2.py
workspace/learning-python/neetcode/: machine_learning.py
workspace/learning-ros/src/listener/: CMakeLists.txt  package.xml
workspace/learning-ros/src/talker/: CMakeLists.txt
