<?xml version="1.0"?>
<package format="2">
  <name>publisher</name>
  <version>0.0.0</version>
  <description>The publisher package</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>
  <depend>catkin</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
